타이틀 수정

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>svg animation</title>
+        <title>svg animation ddd</title>
         <link rel="stylesheet" href="./dist/css/comm.css" />
     </head>
     <body>
+        test
         <svg
             id="_layer_2"
             data-name="layer2"
